[package]
name = "fast-shard"
version = "0.1.2"
edition = "2021"
authors = ["aeromilai"]
description = "High-performance configurable sharding library with SIMD optimizations"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aeromilai/fast-shard"
documentation = "https://docs.rs/fast-shard"
readme = "README.md"
keywords = ["sharding", "simd", "performance", "hash", "distributed"]
categories = ["algorithms", "hardware-support", "caching", "data-structures"]

# See more keys and definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = []
nightly = []  # Enable nightly features like avx512
runtime-detection = [] # Enable runtime CPU feature detection

[dependencies]
xxhash-rust = { version = "0.8", features = ["xxh3"] }
fnv = "1.0"
cfg-if = "1.0"

# Optional dependencies for runtime CPU feature detection
raw-cpuid = { version = "11.0", optional = true }

[dev-dependencies]
criterion = "0.5"
rand = "0.8"
proptest = "1.3"
assert_matches = "1.5"

[build-dependencies]
rustversion = "1.0"

[[bench]]
name = "shard_benchmark"
harness = false

[[bench]]
name = "hash_comparison"
harness = false

[profile.release]
lto = true        # Enable link-time optimization
codegen-units = 1 # Optimize for size and speed
opt-level = 3     # Maximum optimization
debug = false     # No debug symbols
panic = "abort"   # Remove panic unwinding overhead

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3
debug = false

[package.metadata.docs.rs]
# Enable nightly features when building docs
features = ["nightly"]
# Document all features
all-features = true
# Include cpu target features in documentation
rustdoc-args = ["--cfg", "docsrs"]
# Target architectures to build docs for
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.cargo-all-features]
# Skip these combinations when testing all feature combinations
skip_feature_sets = [
    ["nightly", "runtime-detection"],
]

[badges]
maintenance = { status = "actively-developed" }
